hphp/hack/test/typecheck/references/refs_in_array/binding_new_element2.php.exp
File "binding_new_element2.php", line 6, characters 11-13:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
